add post, posts, css fix

--- a/static/index.html
+++ b/static/index.html
@@ -83,7 +83,7 @@
             <div>
                 <div class="header-feature header-feature-1">
                     <div class="header-feature-inner">
-                        <p>Вместе с выполненной работой, вы получите <span>результат проверки её на анти-плагиат</span></p>
+                        <p>Вместе с выполненной работой, Вы получите <span>результат проверки её на анти-плагиат</span></p>
                     </div>
 
                 </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="header-feature header-feature-3">
                 <div class="header-feature-inner">
-                    <p class="text-block">Сопровождаем вас до полной сдачи работы, <span>все доработки выполним бесплатно</span></p>
+                    <p class="text-block">Сопровождаем Вас до полной сдачи работы, <span>все доработки выполним бесплатно</span></p>
                 </div>
 
             </div>
@@ -148,7 +148,8 @@
                         <input class="form-control" value="" placeholder="Предмет">
                         <div class="d-flex-jc-sb">
                             <input type="number" class="form-control form-control-sm " value="" placeholder="Объем">
-                            <input class="form-control form-control-sm " value="" placeholder="Срок">
+                            <input class="form-control form-control-sm " value="" placeholder="Срок" type="date"
+                                   onchange="this.className=(this.value!=''?'form-control form-control-sm has-value':'form-control form-control-sm')">
                         </div>
                         <input type="file" class="form-control form-control-lg">
                     </div>
@@ -211,7 +212,7 @@
     <section class="how-it-works">
         <div class="container">
             <h3 class="text-center">Как происходит ход работы</h3>
-            <h4 class="text-center not-visible-sm">Узнайте, что будет, после того как вы обратитесь к нам за помощью</h4>
+            <h4 class="text-center not-visible-sm">Узнайте, что будет, после того как Вы обратитесь к нам за помощью</h4>
             <div class="how-it-works-numbers not-visible-sm">
                 <div id="step_1" class="how-it-works-step step-active">
                     <a href="#"><span>01</span></a>
