--- a/static/index.html
+++ b/static/index.html
@@ -148,7 +148,7 @@
                         <input class="form-control" value="" placeholder="Предмет">
                         <div class="d-flex-jc-sb">
                             <input type="number" class="form-control form-control-sm " value="" placeholder="Объем">
-                            <input class="form-control form-control-sm " value="" placeholder="Срок" type="date"
+                            <input class="form-control form-control-sm " value="" placeholder="Срок сдачи" type="date"
                                    onchange="this.className=(this.value!=''?'form-control form-control-sm has-value':'form-control form-control-sm')">
                         </div>
                         <input type="file" class="form-control form-control-lg">
