--- a/static/lk.html
+++ b/static/lk.html
@@ -97,9 +97,11 @@
                             <p class="text-block"><span>Предмет:</span> Бухгалтерский учет и аудит</p>
                             <p class="text-block"><span>Тема:</span> Бухучет основных средств</p>
                         </div>
+
                         <div class="tab-order-price">
                             <p>Стоимость:</p>
-                            <span>7 900 руб</span>
+
+                            <span class="loading"></span>
                         </div>
                         <div class="tab-order-prepay">
                             <p>Предоплата:</p>
@@ -114,7 +116,16 @@
                                 <span>Ожидаем предоплаты</span>
                             </div>
                         </div>
-                        <a href="#" class="btn">внести предоплату</a>
+                        <div class="tab-order-status-buttons">
+                            <form>
+                            <button type="submit" class="btn">внести предоплату</button>
+                        </form>
+                         <form>
+                            <button type="submit" class="btn">оплатить</button>
+                        </form>
+                        </div>
+
+
                     </div>
 
                 <div class="order-messages mb20">
