add yandex payments

--- a/static/lk.html
+++ b/static/lk.html
@@ -105,7 +105,7 @@
                         </div>
                         <div class="tab-order-prepay">
                             <p>Предоплата:</p>
-                            <span>2 300 руб</span>
+                          <span class="paid-checkmark">&#10004; 1000 р</span>
                         </div>
                     </div>
                     <p class="tab-order-status">Статус заказа:</p>
