--- a/static/index.html
+++ b/static/index.html
@@ -428,7 +428,7 @@
 
 
 
-            <div class="header-logo not-visible-sm">
+            <div class="header-logo not-visible-sm not-visible-md">
                 <img src="images/icons/ede.png" alt="">
                 <span>Заказать диплом или курсовую у реальных практиков</span>
             </div>
