--- a/static/index.html
+++ b/static/index.html
@@ -151,7 +151,7 @@
                             <input class="form-control form-control-sm " value="" placeholder="Срок сдачи" type="date"
                                    onchange="this.className=(this.value!=''?'form-control form-control-sm has-value':'form-control form-control-sm')">
                         </div>
-                        <input type="file" class="form-control form-control-lg">
+                        <input data-placeholder="asdsadsa" type="file" class="form-control form-control-lg">
                     </div>
 
 
