--- a/static/index.html
+++ b/static/index.html
@@ -133,7 +133,7 @@
     <section id="callback_form" class="calculation-form">
         <div style="margin-top: 140px" class="container-sm">
             <h3 class="text-center">Узнайте стоимость своей работы</h3>
-            <h4 class="text-center">Мы пришлём точный ответ на вашу почту</h4>
+            <h4 class="text-center">Мы пришлём точный ответ на Вашу почту</h4>
             <div class="calculation-form-wrapper">
                 <div class="calculation-form-inner">
                     <div class="form-row">
@@ -162,7 +162,7 @@
                     <input class="form-control input-user" value="" placeholder="Ваше ФИО">
                 </div>
                 <p class="form-error">Отмеченные поля обязательны для заполнения</p>
-                <button  class="btn btn-lg m-a mt30 mb30">Узнать стоимость своей работы<br><span>ответ придет на ваш почтовый ящик</span></button>
+                <button  class="btn btn-lg m-a mt30 mb30">Узнать стоимость своей работы<br><span>ответ придет на Ваш почтовый ящик</span></button>
 
                 <label class="custom-checkbox"><span>Даю согласие на обработку моих персональных данных</span>
                     <input name="" checked  type="checkbox">
@@ -173,7 +173,7 @@
     </section><!-- // calculation-form -->
     <section class="about-man">
         <div class="container">
-            <h3 class="mb50">Работу выполнит человек, <span>специализирующийся</span><br>на вашей специальности</h3>
+            <h3 class="mb50">Работу выполнит человек, <span>специализирующийся</span><br>на Вашей специальности</h3>
             <p class="text-block not-visible-sm">
                 Мы несколько раз меняли исполнителей, именно потому, что нам было необхадимо лично видеть, что человек искрене любит свое дело, а значит, к каждой работе будет подходить уникально и ответственно, работая на результат.
             </p>
@@ -232,7 +232,7 @@
                 <div id="slide_1" class="how-it-works-slide slide-active">
                     <div class="slide-text">
                         <h5 data-number="01" class="mb30">Оставьте заявку и узнайте цену</h5>
-                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с Вами и отправим письмо с ценой Вашей работы на Ваш e-mail</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="images/hw-slider.jpg" alt="">
@@ -241,7 +241,7 @@
                 <div id="slide_2" class="how-it-works-slide ">
                     <div class="slide-text">
                         <h5 data-number="02" class="mb30">Оставьте заявку и узнайте цену</h5>
-                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с Вами и отправим письмо с ценой Вашей работы на Ваш e-mail</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="images/hw-slider.jpg" alt="">
@@ -250,7 +250,7 @@
                 <div id="slide_3" class="how-it-works-slide ">
                     <div class="slide-text">
                         <h5 data-number="03" class="mb30">Оставьте заявку и узнайте цену</h5>
-                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с Вами и отправим письмо с ценой Вашей работы на Ваш e-mail</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="images/hw-slider.jpg" alt="">
@@ -259,7 +259,7 @@
                 <div id="slide_4" class="how-it-works-slide ">
                     <div class="slide-text">
                         <h5 data-number="04" class="mb30">Оставьте заявку и узнайте цену</h5>
-                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с Вами и отправим письмо с ценой Вашей работы на Ваш e-mail</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="images/hw-slider.jpg" alt="">
@@ -284,7 +284,7 @@
     <section class="lets-meet not-visible-md">
         <div class="container">
             <div class="lets-meet-inner">
-                <h3>Давайте познакомимся<br/> с вами лично</h3>
+                <h3>Давайте познакомимся<br/> с Вами лично</h3>
                 <div class="quote">
                     <p>Несколько лет ушло на отбор настоящих профессионалов, которые не просто видят в этом способ заработка, а действительно любят свое дело</p>
                 </div>
