--- a/static/price.html
+++ b/static/price.html
@@ -182,7 +182,7 @@
                 <input class="form-control input-user" value="" placeholder="Ваше ФИО">
             </div>
             <p class="form-error">Отмеченные поля обязательны для заполнения</p>
-            <button  class="btn btn-lg m-a mt30 mb30">Узнать стоимость своей работы<br><span>ответ придет на ваш почтовый ящик</span></button>
+            <button  class="btn btn-lg m-a mt30 mb30">Узнать стоимость своей работы<br><span>ответ придет на Ваш почтовый ящик</span></button>
 
             <label class="custom-checkbox"><span>Даю согласие на обработку моих персональных данных</span>
                 <input name="" checked  type="checkbox">
