add subdomain model

--- a/static/index.html
+++ b/static/index.html
@@ -407,6 +407,12 @@
 
         </div>
 
+
+    </section>
+    <section class="container page-info mb40">
+
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam consectetur distinctio dolores eum fuga maxime nostrum quae quibusdam! Accusamus aperiam beatae eligendi eveniet fuga labore minus officiis sunt, velit veritatis. Alias aliquam asperiores dignissimos doloribus eaque et, illo ipsa magni quisquam vitae! Dicta distinctio fugiat iste magni obcaecati, vel. Dolorem libero maiores neque! Amet assumenda aut beatae blanditiis, dignissimos distinctio dolorem doloribus dolorum eaque eos esse eum illo ipsam ipsum iure minus molestiae molestias mollitia natus nulla officia optio perferendis placeat quia recusandae repellat reprehenderit saepe sit vel velit. Ab assumenda culpa, deserunt dolorem dolores eligendi labore nemo nulla pariatur quis quos reprehenderit, rerum suscipit. Ducimus, qui, quidem? Consectetur, consequuntur dolorem ea earum eum facere id illo in itaque iusto libero minima nam, officia officiis provident quam quas, reprehenderit sit sunt voluptatum. Aperiam architecto atque autem cum deleniti eius eveniet facere, illo iste officiis placeat quia reprehenderit repudiandae totam unde voluptas voluptates. Ad animi aspernatur debitis dolorem doloribus enim et fuga hic illum labore magnam nemo, nihil nobis optio, placeat quaerat, quam quisquam quos sed similique! At cupiditate dolorem ex excepturi, exercitationem id illo inventore laudantium, nam natus placeat quia quidem, quos recusandae rerum saepe soluta suscipit tempore ut vitae. Adipisci aliquam commodi consequuntur dolorem, dolores esse magni maxime quae sed. Asperiores distinctio dolor doloremque, ex excepturi ipsam mollitia nulla placeat quam quibusdam quidem recusandae reiciendis repellat repudiandae similique vel veritatis. Ab accusantium assumenda beatae deleniti deserunt dicta dolorum eius excepturi exercitationem illum impedit inventore labore nesciunt, quidem quis sint tempore unde voluptate. Aspernatur consequuntur cupiditate fuga impedit in maiores optio quis, totam? Architecto blanditiis eius, facere fugiat, impedit minus molestiae nemo numquam possimus reiciendis repellat, rerum sapiente tempora vel veniam! Aliquam aperiam atque cum, delectus fugiat, harum iure laborum magnam officia quasi qui, quia saepe sunt totam voluptate. Quasi?
+
     </section>
 </div><!-- // main -->
 <footer class="footer">
