edit seo text display

--- a/static/price.html
+++ b/static/price.html
@@ -151,6 +151,26 @@
         </div>
 
     </section><!--// why-our-work-->
+
+    <section class="container page-info mb40">
+          <h2>Дипломы на заказ в Челябинске</h2>
+
+<p>Написание и защита диплома - завершающий этап обучения в любом вузе. Успешно защищенная дипломная работа подтверждает, что студент получил и усвоил все положенные знания. Написание диплома - достаточно продолжительный и трудоемкий процесс. Он требует серьезных навыков обработки научной литературы и умения интерпретировать сложную информацию.</p>
+
+<p>Студенты, которые не успевают написать диплом самостоятельно, ищут либо готовые работы, либо человека, который напишет диплом на заказ.</p>
+
+<p>Заказать качественную, уникальную и научно-актуальную дипломную работу можно в центре помощи студентам “Эдельвейс”. Мы предлагаем два варианта. Если работа нужно быстро и недорого - в нашем банке имеются готовые дипломные проекты. Если требуется диплом на конкретную тему с высокой уникальностью - Вам подойдет наша услуга по написанию диплома на заказ.</p>
+
+<p>В центре “Эдельвейс” работают специалисты в различных научных областях: гуманитарной, естественнонаучной, экономической, технической и т.д. Текст готовой работы обязательно проверяется с помощью системы “Антиплагиат”, чтобы процент уникальности был не ниже 60%.</p>
+
+<p>Наши специалисты используют при написании дипломных работ актуальную и современную литературу, подлинную статистику и аналитику. Работа при необходимости сопровождается точными графиками и расчетами. Исполнитель всегда находится в контакте с заказчиком. После передачи готового текста мы не бросаем наших клиентов - проект будет бесплатно сопровождаться вплоть до его защиты. Если возникнет такая необходимость, в текст будут вноситься нужные правки и дополнения.</p>
+
+<h2>Как заказать дипломную работу и сколько это стоит</h2>
+
+<p>Стоимость работы зависит от нескольких основных факторов: насколько сложной является тема работы, каков ее минимальный объем, как срочно требуется диплом и т.д. Если Вы можете предоставить исходный материал для написания дипломной работы на заказ - цена будет более низкой.</p>
+
+<p>Для того, чтобы заказать диплом или уточнить стоимость работы, нам можно оставить заявку на сайте. Мы свяжемся с Вами сразу после ее изучения. Также нам можно позвонить по горячей линии <span style="background-color:white"><span style="color:#333333">8(800)500-43-57</span></span> либо написать в онлайн-чат.</p>
+    </section>
 </div><!-- // main -->
 <div id="callback_modal" class="modal">
     <div class="modal-content callback-modal">
