--- a/static/price.html
+++ b/static/price.html
@@ -145,12 +145,97 @@
             <p class="mb40"><span>Риск получить низкий балл</span> из-за преподавателей и сложности оформления</p>
             <p class="mb40">Лучше <span>положиться на профессионалов,</span> чем ошибиться самому</p>
             <p>Написание дипломных работ – практически всегда <span>нервотрепка и стресс</span></p>
-
-
-
         </div>
-
     </section><!--// why-our-work-->
+
+    <section class="faq">
+        <div class="container">
+             <h3>Топ вопросов по дипломным работам</h3>
+            <div class="faq-wrapper">
+                <div class="faq-item">
+                    <div class="faq-item-question">
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                     <div class="faq-item-answer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, in.</p>
+                     </div>
+                </div>
+                 <div class="faq-item">
+                    <div class="faq-item-question">
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                     <div class="faq-item-answer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, in.</p>
+                     </div>
+                </div>
+                 <div class="faq-item">
+                    <div class="faq-item-question">
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                     <div class="faq-item-answer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, in.</p>
+                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="trust">
+        <div class="container">
+            <h3>Нам доверяют потому что:</h3>
+            <div class="trust-wrapper">
+                <div class="trust-item">
+                    <img src="http://placehold.it/100" alt="">
+                    <p>15 лет на рынке</p>
+                </div>
+                 <div class="trust-item">
+                    <img src="http://placehold.it/100" alt="">
+                    <p>15 лет на рынке</p>
+                </div>
+                 <div class="trust-item">
+                    <img src="http://placehold.it/100" alt="">
+                    <p>15 лет на рынке</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="compare">
+        <div class="container">
+             <h3>Доверьте написание дипломной работы нам</h3>
+            <div class="compare-wrapper">
+                <div class="compare-item">
+                    <div class="compare-item-header">
+                        <p> у конкурентов</p>
+
+                    </div>
+                    <div class="compare-item-list">
+                        <ul>
+                            <li class="bad">Срок бесплатных доработок ограничен</li>
+                            <li class="bad">Работы выдаются прямо от автора</li>
+                            <li class="bad">Никаких юридических гарантий</li>
+                            <li class="bad">Аванс в размере половины стоимости работы</li>
+                        </ul>
+                    </div>
+                </div>
+                 <div class="compare-item">
+                    <div class="compare-item-header">
+                        <p> у нас</p>
+
+                    </div>
+                    <div class="compare-item-list">
+                        <ul>
+                            <li class="good">Сопровождаем Вас до успешной защиты не зависимо от срока</li>
+                            <li class="good">Перед выдачей клиенту все работы проверяются отделом качества,
+                                чтобы вы получили наилучший результат</li>
+                            <li class="good">Дорабатываем столько раз - сколько потребуется</li>
+                            <li class="good">Аванс не более 50%, к тому же план работы мы готовы выполнить бесплатно</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="container page-info mb40">
           <h2>Дипломы на заказ в Челябинске</h2>
